--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: node_js
 node_js:
-  - "8"
-install: npm i
+  - "12"
+before_install: npm install -g cnpm --registry=https://registry.npm.taobao.org
+install: cnpm i
 script: npm run build
